# gfg

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
agent/: csv_agent.py  main_agent.py  workflow.py
agent/prompts/: main_agent_prompt.json  prompt_gen_main_agent.py  prompt_gen_sql_gen.py  sql_gen_prompt.json
agent/tools/: fetch_db.py  generate_sql_and_chart.py  get_schema.py  insight_Tool.py  sql_generator.py  sql_validator.py
api/: Dockerfile  main.py
frontend/: Dockerfile  jsconfig.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test-implementation.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/Chat/: ChatMessage.css  ChatMessage.js  ChatPanel.css  ChatPanel.js  chatStyles.js
frontend/src/components/Graph/: ChartRenderer.jsx  GraphPlaceholder.css  GraphPlaceholder.js  InsightsDisplay.jsx  SQLDisplay.css  SQLDisplay.jsx  graphStyles.js
frontend/src/components/Header/: Header.css  Header.js  HeaderStyle.js
frontend/src/components/Sidebar/: Sidebar.js  SidebarStyles.js
frontend/src/components/landing/: CTASection.jsx  FeaturesSection.jsx  Footer.jsx  HeroSection.jsx  HowItWorksSection.jsx  LandingPage.jsx  Navbar.jsx
frontend/src/components/ui/: chart.jsx
frontend/src/context/: ThemeContext.js  themes.js
frontend/src/data/: dummyResponses.js
frontend/src/lib/: utils.js
frontend/src/styles/: globalStyles.js
graph/: App.tsx
