[project]
name = "gfg-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.0",
    "fastapi>=0.135.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.1",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
